Design: #7, #11 Fixed issue of form jumps to the top inside the search box

--- a/sites/all/themes/hk_theme/sass/components/_leaflet.scss
+++ b/sites/all/themes/hk_theme/sass/components/_leaflet.scss
@@ -173,6 +173,9 @@
       opacity: 0.7;
     }
   }
+  .ui-dialog-titlebar {
+    .ui-dialog-title { /*margin: 0;*/ }
+  }
   .ui-button {
     top: 0;
     right: 0;
@@ -202,6 +205,9 @@
     padding: 0;
   }
   #search {
+    .block-facetapi {
+      height: auto;
+    }
     .bezirk,
      .preis {
       width: 48% !important;
@@ -231,6 +237,52 @@
   }
 
 }
+
+
+/* Search box */
+.page-kaufen #block-views-exp-karten-kaufen, 
+.page-buy #search, .page-rent #search {
+  display: inline-block !important;
+  width: 100%;
+  margin-bottom: 20px;
+  padding-bottom: 10px;
+} 
+.home-form-wrap {
+  #search {
+    .preis {
+      clear: left;
+    }
+  }
+}
+.select2-container {
+  &.select2-container-multi {
+     .select2-choices {
+      max-height: 80px;
+      overflow-y: auto;
+    }
+  }
+  .select2-choices {
+    background-color: #fff;
+    border: 2px solid #cbc1ba !important;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    color: #444;
+  }
+  &.select2-container-active {
+    .select2-choices {
+      border-color: #c61c2c !important;
+    }
+  }
+}
+.hide-submit-text,
+div.hide-submit-processing {
+  display: none !important;
+}
+/* End */
+
+
+
 /*.front .ui-dialog.ui-dialog-show {
   -moz-transition: height 1s ease;
   -webkit-transition: height 1s ease;
@@ -800,3 +852,5 @@
     display: block;
   }
 }
+
+
